<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">光伏机器人远程控制</string>
    <string name="hint_email">邮箱</string>
    <string name="login_title">账号登录</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登录</string>
    <string name="main_title">光伏机器人控制台</string>
    <string name="mqtt_status">MQTT</string>
    <string name="device_status">设备</string>
    <string name="battery">电量</string>
    <string name="btn_forward">前进</string>
    <string name="btn_backward">后退</string>
    <string name="btn_left">左转</string>
    <string name="btn_right">右转</string>
    <string name="btn_stop">停止</string>
    <string name="btn_emergency">急停</string>
    <string name="view_logs">查看日志</string>
    <string name="log_list_title">本地日志</string>
    <string name="empty_logs">暂无日志</string>
    <string name="value_unavailable">--</string>
    <string name="status_unknown">未知状态</string>
    <string name="work_status_idle">待机</string>
    <string name="work_status_running">运行中</string>
    <string name="work_status_stopped">已停止</string>
    <string name="work_status_estopped">急停锁定</string>
    <string name="control_mode_auto">自动模式</string>
    <string name="control_mode_manual">手动模式</string>
    <string name="control_mode_unknown">未知模式</string>
    <string name="status_normal">正常</string>
    <string name="status_warning">告警</string>
    <string name="status_fault">故障</string>
    <string name="movement_moving">移动中</string>
    <string name="movement_stopped">静止</string>
    <string name="movement_turning">转向中</string>
    <string name="movement_blocked">受阻</string>
    <string name="command_start">开始运行</string>
    <string name="command_stop">停止运行</string>
    <string name="command_pause">暂停任务</string>
    <string name="command_resume">继续任务</string>
    <string name="command_replan">重新规划</string>
    <string name="command_manual">切换手动模式</string>
    <string name="command_auto">切回自动模式</string>
    <string name="command_estop">紧急停止</string>
    <string name="command_clear_estop">解除急停</string>
    <string name="command_unknown">未知操作</string>
    <string name="command_status_sending">正在发送</string>
    <string name="command_status_success">任务层已接受</string>
    <string name="command_status_failed">执行失败</string>
    <string name="command_status_timeout">等待超时</string>
    <string name="command_status_connection_lost">连接中断</string>
    <string name="command_feedback_sending">正在发送“%1$s”指令</string>
    <string name="command_feedback_success">任务层已接受“%1$s”，最终结果以任务状态为准</string>
    <string name="command_feedback_failed">“%1$s”未能执行，请确认设备状态后重试</string>
    <string name="command_feedback_timeout">暂未确认“%1$s”的执行结果，请查看设备当前状态</string>
    <string name="command_feedback_connection_lost">连接已中断，无法确认“%1$s”的执行结果</string>
    <string name="product_type_crawler">光伏清扫机器人</string>
    <string name="product_type_other">其他设备</string>
    <string name="battery_unknown">电量未知</string>
    <string name="battery_content_description">当前电量 %1$d%%</string>
    <string name="job_status_pending">等待执行</string>
    <string name="job_status_running">执行中</string>
    <string name="job_status_completed">已完成</string>
    <string name="job_status_failed">执行失败</string>
    <string name="job_status_cancelled">已取消</string>
    <string name="error_load_failed">加载失败，请检查网络后重试</string>
    <string name="error_read_failed">读取失败，请稍后重试</string>
    <string name="firmware_upgrade_submitted">升级任务已提交，请留意设备状态</string>
</resources>
